# unpaywall-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/unpaywall_mcp_server/: server.py
